--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
 		#gameScreen {
 			border: 1px solid black;
 		}
-		img {
-			display: none;
-		}
 	</style>
 	
 </head>
 
 <body>	
-	<img id="partMage" src="assets/mag.png">
+	<!-- <img id="partMage" style="opacity:0.5" src="assets/mag.png"> -->
 
 	<canvas id="gameScreen" width="800" height="600"></canvas>
 	<input type="range" min="1" max="20" value="10" id="partMax">
