--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			width: 50%;
 			height: 610px;
 			width: 810px;
-			background-color: #555;
+			<!-- background-color: #555; -->
 		}
 	</style>
 	
@@ -71,7 +71,7 @@
 			<button class="charButt" id="leftButt">&lt;</button>
 			<div id="char">
 				<input id="charName">Name</input>
-				<img id="charImage" src="/assets/avi1.png">
+				<img id="charImage" src="/assets/rex.png">
 			</div>
 			<button class="charButt" id="rightButt">&gt;</button>
 		</div>
